gcc/testsuite/rust/rustc/ui/macros/bad_hello.rs
fn main() {
    println!(3 + 4);
// { dg-error "" "" { target *-*-* } .-1 }
    println!(3, 4);
// { dg-error "" "" { target *-*-* } .-1 }
}

